# rpi_AD7705_daq

./: .gitmodules  AD7705Comm.cpp  AD7705Comm.h  CMakeLists.txt  Doxyfile  FastCGI.h  JSON_cgi.h  README  README.md  UDP_receive.py  ad7705_json.cpp  ad7705_test.c  ad7705_test.cpp  ad7705fastcgi.cpp  doxy.md  udp_transmit.cpp
docs/: AD7705Comm_8h_source.html  annotated.html  annotated_dup.js  classAD7705Comm-members.html  classAD7705Comm.html  classAD7705Comm.js  classAD7705callback-members.html  classAD7705callback.html  classAD7705callback.js  classes.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js  structAD7705settings-members.html  structAD7705settings.html  structAD7705settings.js
docs/pdf/: annotated.tex  classAD7705Comm.tex  classAD7705callback.tex  index.tex  refman.tex  structAD7705settings.tex
docs/rtf/: refman.rtf
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
example/: CMakeLists.txt  ad7705_printer.cpp
pcb/: README  rpi_ad7705.brd  rpi_ad7705.sch  rpi_ad7705_bom.ods
website/: animate.php  graph.php  index.html  index.php  json.php  nginx-sites-enabled-default  textonly.html
